--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cachelib==0.13.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+coverage==7.6.0
 distro==1.9.0
 Flask==3.0.2
 Flask-Cors==4.0.1
@@ -30,6 +31,7 @@ psycopg2-binary==2.9.9
 pydantic==2.7.1
 pydantic_core==2.18.2
 pytest==8.0.0
+pytest-cov==5.0.0
 python-dotenv==1.0.1
 redis==5.0.7
 requests==2.32.3
