--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run tests
+      env:
+        OPENAI_API_KEY: ${{ secrets.TEST_OPENAI_API_KEY }}
       run: pytest
 
   deploy:
