--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
-    "python.testing.unittestArgs": [
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestArgs": [
         "-v",
         "-s",
-        "./tests",
-        "-p",
-        "test*.py"
+        "tests",
+        "--disable-warnings"
     ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.autoTestDiscoverOnSaveEnabled": true
 }
