--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.2
+aiosignal==1.3.1
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+attrs==24.2.0
 black==24.4.2
 blinker==1.7.0
 cachelib==0.13.0
@@ -14,6 +18,7 @@ Flask-Cors==4.0.1
 Flask-Migrate==4.0.5
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+frozenlist==1.4.1
 greenlet==3.0.3
 gunicorn==22.0.0
 h11==0.14.0
@@ -26,6 +31,7 @@ Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
 msgspec==0.18.6
+multidict==6.0.5
 mypy-extensions==1.0.0
 openai==1.35.2
 packaging==23.2
@@ -46,3 +52,4 @@ tqdm==4.66.4
 typing_extensions==4.9.0
 urllib3==2.2.2
 Werkzeug==3.0.1
+yarl==1.9.4
